# rvnjsonresource

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  LICENSE.X11.ESHARD  LICENSE.X11.TETRANE  README.md
include/: common.h  metadata.h  reader.h  writer.h
src/: metadata.cpp  reader.cpp  writer.cpp
test/: CMakeLists.txt  dummy.h  test_metadata.cpp  test_reader.cpp  test_writer.cpp
